--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "1",
+  "name": "2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server --hot --inline",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git"
-  },
-  "author": "1",
+    "scripts": {
+       "start": "webpack-dev-server --hot --inline",
+       "build": "webpack"
+     },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "1"
-  },
-  "homepage": "1",
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
@@ -23,17 +17,11 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2",
     "webpack": "^2.0.0",
     "webpack-dev-server": "^2.0.0"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
     "react": "^15.5.0",
-    "react-day-picker": "^6.0.3",
-    "react-dom": "^15.5.0",
-    "react-select": "^1.0.0-rc.5",
-    "react-transition-group": "^1.2.0"
+    "react-dom": "^15.5.0"
   }
 }
